# wfx-led-panel

./: .gitignore  Makefile  PROTOCOL.md  README.md  platformio.ini
cli/: README.md  SPRITE_SYSTEM.md  pyproject.toml
cli/matrix_cli/: __init__.py  cli.py  image_utils.py  matrix.py  sprite_animation.py  sprite_image_example.py  sprite_test.py
include/: fix_serial.h  hd_wf1_esp32s2_config.h  hd_wf2_esp32s3_config.h
include/sim/: Arduino.h  ArduinoCompat.h  Print.h  SimMatrixPanel.h  SimSerial.h
lib/Adafruit_GFX_Library/: Adafruit_GFX.h
src/: SimMatrixPanel.cpp  SimSerial.cpp  command_handler.cpp  command_handler.h  hd-wf2-esp32s3-config.h  led_pwm_handler.h  main.cpp
